# Active-Noise-Control

./: FxLMS_modefication.m  norm_constrain.m
FxLMS_last/include/: conv.h  debug_config.h  randn.h
FxLMS_last/src/: AdaptiveFilter.c  AdaptiveFilter_test.c  conv.c
norm_constrain_last/: CMakeLists.txt
norm_constrain_last/include/: AdaptiveFilter.h  AdaptiveFilter_test.h  conv.h  main.h
norm_constrain_last/src/: AdaptiveFilter.c  AdaptiveFilter_test.c  main.c  randn.c
